<resources>
    <string name="app_name">Finance Tracker</string>

    <!-- Hints -->
    <string name="hint_title">Title</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_date">Date (e.g. 2025-04-12)</string>

    <!-- Types -->
    <string name="income">Income</string>
    <string name="expense">Expense</string>

    <!-- Buttons -->
    <string name="save_transaction">Save Transaction</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="view_chart">View Spending Chart</string>
    <string name="view_history">View Transaction History</string>
    <string name="set_budget">Set Monthly Budget</string>
    <string name="export_json">Export to JSON</string>
    <string name="export_txt">Export to TXT</string>
    <string name="filter_income">Show Incomes</string>
    <string name="filter_expense">Show Expenses</string>
    <string name="filter_all">Show All</string>

    <!-- Titles -->
    <string name="transaction_history">Transaction History</string>
    <string name="budget_warning">⚠️ You have exceeded your budget!</string>

    <!-- Auth Flow -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_account">No account yet? Register here</string>
    <string name="logout">Logout</string>
    <string name="tagline_finance">Smart money made simple</string>


</resources>
